--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,178 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
+}
+
+.active{
+  background-color: #4643EE1A;
+  padding: 10px;
+  border-radius: 5px;
+  color: #4643EE;
+}
+.right-panel{
+  flex: 2;
+  flex-basis: 70%;
+  padding: 48px 45px 32px 42px;
+}
+.dashboard-sections{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid #ADADAD;
+  /* padding-bottom: 20px; */
+  /* padding-top: 20px; */
+  margin-top: 20px;
+  height: 40px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+}
+.monitor-status{
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.dashboard-options{
+  position: absolute;
+  display: flex;
+  width: 100%;
+  gap: 30px;
+  height: 40px;
+}
+.dashboard-close{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  position: absolute;
+  height: 40px;
+  right: 0;
+  top: -15px;
+  background-color: #F6D8D8;
+  color: #D13B3B;
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.active-dashboard{
+  height: 41px;
+  color: #4643EE;
+  border-bottom: 2px solid #4643EE !important;
+
+}
+.dashboard-filters{
+  display: flex;
+  margin-top: 20px;
+  gap: 15px;
+}
+.search-container{
+  position: relative;
+}
+.search-box{
+  width: 300px;
+  border: 1px solid #E4E4E4;
+  border-radius: 8px;
+  padding: 10px 16px;
+  outline: none;
+  padding-left: 40px;
+}
+.search-icon{
+  position: absolute;
+  left: 10px;
+  top: 6px;
+}
+.filter-options{
+  background-color: #F5F5F5;
+  padding: 8px 12px;
+  border-radius: 7px;
+  cursor: pointer;
+  /* height: 34px;
+  width: fit-content; */
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+  /* width: 100%; */
+}
+
+.filter-option-container{
+  position: relative;
+}
+.filter-reasons{
+  width: 190px;
+  /* height: 200px; */
+  background-color: white;
+  position: absolute;
+  right: 0;
+  padding: 5px;
+  top: 50px;
+  border: 1px solid #E4E4E4;
+  box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  display: none;
+}
+.option-active{
+  display: block;
+}
+.filter-reasons li{
+  list-style: none;
+  padding: 5px 10px;
+  color: #777676;
+}
+.filter-reasons li:hover{
+  background-color: #EAEAFE;
+  color: black;
+  cursor: pointer;
+  border-radius: 4px;
+}
+.lineblack{
+  /* width: 40px; */
+  height: 5px;
+  /* background-color: black; */
+  position: absolute;
+  left: 30px;
+  font-size: 32px;
+  top: 53px;
+  cursor: pointer;
+  display: none;
+}
+.cross-nav{
+  display: none;
+}
+@media screen and (max-width:1100px) {
+  .heading h1{
+    margin-left: 40px;
   }
-  to {
-    transform: rotate(360deg);
+  .lineblack{
+    display: block;
+  }
+  .left-panel{
+    
+    
+    width: 0;
+    height: 100vh;
+    display: none;
+    background-color: white;
+    padding-left: 150px;
+  }
+  .nav-active{
+    position: absolute;
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    z-index: 3;
+  }
+  .cross-nav{
+    display: block;
+    position: absolute;
+    right: 30px;
+    top: 50px;
+    font-size: 32px;
+    cursor: pointer;
   }
 }
